--- a/views/ilha_cavaleiros.html
+++ b/views/ilha_cavaleiros.html
@@ -8,12 +8,15 @@
 </head>
 <body>
     <div class="container">
-        <p class="texto"><strong>População:</strong> Os <span class="cavaleiros">cavaleiros dizem sempre a verdade.</span></p>
-        <p class="texto"><span class="escudeiros">Os escudeiros mentem sempre.</span></p>
+        <p class="texto"><strong>População:</strong> <span class="cavaleiros">Os cavaleiros dizem sempre a verdade.</span></p>
+        <p class="texto"><span class="escudeiros"> Os escudeiros mentem sempre.</span></p>
         <p class="texto"><span class="normais">Os normais mentem às vezes e às vezes dizem a verdade.</span></p>
-        <img src="../assets/images/cavaleiro.png" alt="Cavaleiro">
+        <img src="../assets/images/cavaleiro.png" alt="Cavaleiro" >
         <br>
-        <button class="voltar" onclick="goTo('mapa')">Voltar ao Mapa</button>
+        <div class="botoes">
+            <button class="voltar" onclick="goTo('mapa')">Voltar ao Mapa</button>
+            <button class="voltar" onclick="goTo('proxima_pagina')">Avançar</button>
+        </div>
     </div>
 </body>
 <script src="../scripts/index.js"></script>
