--- a/views/ilha_robots.html
+++ b/views/ilha_robots.html
@@ -15,7 +15,7 @@
         <br>
         <div class="botoes">
             <button class="voltar" onclick="goTo('mapa')">Voltar ao Mapa</button>
-            <button class="voltar" onclick="goTo('proxima_pagina')">Avançar</button>
+            <button class="voltar" onclick="goTo('mapa')">Avançar</button>
         </div>
     </div>
 </body>
