--- a/views/ilha_transilvania.html
+++ b/views/ilha_transilvania.html
@@ -32,7 +32,7 @@
         
         <div class="botoes">
             <button class="voltar" onclick="goTo('mapa')">Voltar ao Mapa</button>
-            <button class="voltar" onclick="goTo('mapaa')">Avançar</button>
+            <button class="voltar" onclick="goTo('mapa')">Avançar</button>
         </div>
     </div>
 </body>
