--- a/views/ilha_bahava.html
+++ b/views/ilha_bahava.html
@@ -37,7 +37,21 @@
             <button class="voltar" onclick="mostrarAnterior()">◀ Anterior</button>
             <button class="voltar" onclick="mostrarProxima()">Avançar ▶</button>
         </div>
+
+        <!--     conainers das personagens  -->
+        <div class="container-personagens">
+            <div class="personagem"></div>
+            <div class="personagem"></div>
+            <div class="personagem"></div>
+            <div class="personagem"></div>
+            <div class="personagem"></div>
+            <div class="personagem"></div>
+        </div>
+        <!--    end  -->
     </div>
+
+    <!-- -->
+    
 
     <!-- BLOCO DE DECISÃO (escondido inicialmente, via JS) -->
     <div id="blocos-container" style="display: none;"></div>
