--- a/styles/ilha_bahava.css
+++ b/styles/ilha_bahava.css
@@ -8,6 +8,26 @@ body {
     background-attachment: fixed;
     color: #333;
 }
+/*  */
+.container-personagens {
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Centraliza as personagens horizontalmente */
+    gap: 20px; /* Espaço entre cada personagem */
+    margin-top: 20px; /* Espaço entre o container dos botões e o primeiro personagem */
+}
+
+.personagem {
+    width: 100px; /* Ajuste a largura conforme necessário */
+    height: 100px; /* Ajuste a altura conforme necessário */
+    background-color: #f0f0f0; /* Exemplo de cor de fundo */
+    border: 1px solid #ccc; /* Exemplo de borda */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/*  */
 
 .container {
     display: flex;
