--- a/views/ilha_bahava.html
+++ b/views/ilha_bahava.html
@@ -38,7 +38,7 @@
             <button class="voltar" onclick="mostrarProxima()">Avançar ▶</button>
         </div>
 
-        <!--     conainers das personagens  -->
+        <!--     conainers das personagens  
         <div class="container-personagens">
             <div class="personagem"></div>
             <div class="personagem"></div>
@@ -47,7 +47,7 @@
             <div class="personagem"></div>
             <div class="personagem"></div>
         </div>
-        <!--    end  -->
+            end  -->
     </div>
 
     <!-- -->
