--- a/views/index.html
+++ b/views/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../styles/index.css">
 </head>
 <body>
-    <img src="../assets/images/fundo-img5.png" id="fundo-img" alt="Fundo do mapa">
+   <!-- <img src="../assets/images/fundo-img5.png" id="fundo-img" alt="Fundo do mapa">-->
     <div id="map-container">
         
     <h1 id="titulo-principal">Mapa Interativo - Planeta Smullyan</h1>
