--- a/styles/ilha_bahava.css
+++ b/styles/ilha_bahava.css
@@ -59,7 +59,7 @@ body {
     flex-direction: row-reverse;
     justify-content: flex-start; /* ou flex-start/center */
     align-items: flex-start ;       /* alinhar ao topo */
-    max-width: 50%;
+    width: 100%;
     max-height: 20vh;
     gap: 20px;
     margin-top: 0px;
