--- a/styles/index.css
+++ b/styles/index.css
@@ -36,7 +36,7 @@ body {
   top: 10vh;      /* Ajuste a distância do topo conforme necessário */
   left: 2vw;     /* Ajuste a distância da esquerda conforme necessário */
   z-index: 3;  /* Garante que fiquem acima de outros elementos */
-  padding: 0;
+  padding: 0px 50px;
   background-color: #007bff00; /* Cor de fundo */
   color: white;
   border: 2px dotted red;  /* visualiza a área clicável */
