--- a/views/biografia_smullyan.html
+++ b/views/biografia_smullyan.html
@@ -11,7 +11,7 @@
         
         <h1>Raymond Smullyan (1919 - 2017)</h1>
         
-        <img src="../assets/images/Smullyan.png" alt="Foto de Raymond Smullyan" class="img-biografia">
+        <img src="../assets/images/smullyan.png" alt="Foto de Raymond Smullyan" class="img-biografia">
 
         <h2>Breve Apresentação</h2>
         <p>Raymond Smullyan foi um matemático, filósofo e mágico americano. É reconhecido mundialmente pelos seus enigmas lógicos originais e paradoxos auto-referenciais.</p>
