--- a/views/index.html
+++ b/views/index.html
@@ -27,7 +27,7 @@
           
           <button id="btn-direita" class="btn-imagem2">
             <img src="../assets/images/botao3.png" alt="Direita">
-            <span>Direita</span>
+            <span>Recursos</span>
           </button>
         
         <div id="svg-container">
